# opencv_project

./: CMakeLists.txt  readme.md
code/: gesture.h  traject_cap.h  traject_face.h
code/flppybird/: Flppybird.cpp  Flppybird.h
